# adaptiveSampling

./: .cproject  .project  CMakeLists.txt  Dimensions.txt  Volume.txt  add_all.sh  allVolume.txt
Matlab/: addressChecking.m  addressChecking.m~  blockPixelShuffling.m  blockPixelShuffling.m~  pixelShuffleAllPercentage.m  psnrForAll.m  psnrForAll.m~  psnrForTriCubic.m  stripGenerator.m  stripGenerator.m~  varianceDemo.m  varianceDemo.m~  varianceTest.m
blockPattern/: 10.txt  20.txt  25.txt  30.txt  37.5.txt  40.txt  50.txt  60.txt  62.5.txt  70.txt  75.txt  80.txt  87.5.txt  90.txt
cpp_src/: header.h  main.cpp
cuda_src/: constantMemory.h  kernel.cu  kernel.h  reconstruction.h  reconstructionkernel.cu
textFiles/: redVariance.txt  varianceInput.txt
textFiles/Pattern/1029by1029_10/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt  1029by1029_ptrnIdx.txt
textFiles/Pattern/1029by1029_20/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt  1029by1029_ptrnIdx.txt
textFiles/Pattern/1029by1029_30/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt  1029by1029_ptrnIdx.txt
textFiles/Pattern/1029by1029_40/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt
textFiles/Pattern/1029by1029_60/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt
textFiles/Pattern/1029by1029_70/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt
textFiles/Pattern/1029by1029_80/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt
textFiles/Pattern/1029by1029_90/: 1029by1029.txt  1029by1029Xcoord.txt  1029by1029Ycoord.txt
